# gqlsp

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
gqls/: Cargo.toml
gqls-parse/: build.rs
gqls-parse/src/: lib.rs
gqls-syntax/: Cargo.toml
gqls/src/: lib.rs  lsp.rs
gqls/tests/lsp/: main.rs
src/gqls/: Cargo.toml
src/gqls-base-db/: Cargo.toml
src/gqls-base-db/src/: lib.rs
src/gqls-db/: Cargo.toml
src/gqls-db/src/: lib.rs
src/gqls-diagnostics/: Cargo.toml
src/gqls-diagnostics/src/: lib.rs
src/gqls-fixture/: Cargo.toml
src/gqls-fixture/src/: lib.rs  tests.rs
src/gqls-ide/: Cargo.toml
src/gqls-ide/src/: completions.rs  def.rs  diagnostics.rs  edit.rs  highlight.rs  implementation.rs  lib.rs  macros.rs  references.rs  rename.rs  resolve.rs  symbols.rs  tests.rs  tokens.rs  typedef.rs
src/gqls-ide/src/completions/: tests.rs
src/gqls-ide/src/completions/tests/: directives.rs  infer_context.rs  queries.rs
src/gqls-ide/src/def/: tests.rs
src/gqls-ide/src/diagnostics/: tests.rs
src/gqls-ide/src/diagnostics/tests/: duplicate.rs  empty_fields.rs  impl_non_interface.rs  io.rs  syntax.rs  typecheck.rs  unresolved.rs
src/gqls-ide/src/edit/: tests.rs
src/gqls-ide/src/highlight/: tests.rs
src/gqls-ide/src/implementation/: tests.rs
src/gqls-ide/src/references/: tests.rs
src/gqls-ide/src/rename/: tests.rs
src/gqls-ide/src/rename/tests/: prepare_rename.rs
src/gqls-ide/src/resolve/: tests.rs
src/gqls-ide/src/symbols/: document_symbols_tests.rs  tests.rs  workspace_symbols_tests.rs
src/gqls-ide/src/typedef/: tests.rs
src/gqls-ir/: Cargo.toml
src/gqls-ir/src/: body.rs  db.rs  diagnostic.rs  lib.rs  lower.rs  tests.rs  ty.rs
src/gqls-ir/src/lower/: tests.rs
src/gqls-parse/: Cargo.toml
src/gqls-parse/src/: lib.rs  node.rs  node_generator.rs  tests.rs
src/gqls-syntax/: Cargo.toml  build.rs
src/gqls-syntax/src/: lib.rs  node_generator.rs  nodes.rs  tests.rs  traverse.rs
src/gqls-syntax/src/traverse/: tests.rs
src/gqls-ty/: Cargo.toml
src/gqls-ty/src/: db.rs  fmt.rs  lib.rs  tests.rs
src/gqls-ty/src/tests/: has_type.rs  implements_interface.rs
src/gqls/src/: config.rs  convert.rs  lib.rs  lsp.rs  tokens.rs
src/gqls/src/config/: tests.rs
src/gqls/src/lsp/: tests.rs
src/gqls/src/lsp/fixtures/multi/: .graphqlrc.yaml
src/gqls/src/lsp/fixtures/simple/: .graphqlrc.yaml
src/gqls/tests/lsp/: main.rs
src/gqls/tests/lsp/fixtures/config/: .graphqlrc.yaml
src/gqls/tests/lsp/fixtures/highlight/: highlight.graphql
src/gqls/tests/lsp/fixtures/simple/: test.graphql
src/testing/: Cargo.toml
src/testing/src/: lib.rs
src/vfs/: Cargo.toml
src/vfs/src/: interner.rs  lib.rs
tree-sitter-graphql/: Cargo.toml  grammar.js  package.json
tree-sitter-graphql/bindings/rust/: lib.rs
tree-sitter-graphql/src/: grammar.json  node-types.json  parser.c
vscode-gqls/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode-gqls/src/: bootstrap.ts  config.ts  extension.ts
