[package]
name = "gqls-ide"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1"
ropey = "1"
tracing = "0.1"
tree-sitter = "0.20"

[dependencies.gqls-db]
path = "../gqls-db"

[dependencies.gqls-parse]
path = "../gqls-parse"

[dependencies.vfs]
path = "../vfs"

[dev-dependencies]
expect-test = "1"

