[package]
name = "gqls-ide"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1"
parking_lot = "0.12"
ropey = "1"
tracing = "0.1"
tree-sitter = "0.20"

[dependencies.gqls-db]
path = "../gqls-db"

[dependencies.gqls-ir]
path = "../gqls-ir"

[dependencies.gqls-syntax]
path = "../gqls-syntax"

[dependencies.vfs]
path = "../vfs"

[dev-dependencies]
expect-test = "1"
maplit = "1"

[dev-dependencies.gqls-fixture]
path = "../gqls-fixture"

