[package]
name = "gqls-ir"
version = "0.1.0"
edition = "2021"

[dependencies]
la-arena = "0.2"
salsa = "0.17.0-pre.2"
smallvec = "1"
smol_str = "0.1"

[dependencies.gqls-base-db]
path = "../gqls-base-db"

[dependencies.gqls-parse]
path = "../gqls-parse"

[dependencies.vfs]
path = "../vfs"

[dev-dependencies]
expect-test = "1"
maplit = "1"

