[package]
name = "gqls-ir"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1"
salsa = "0.17.0-pre.2"
smallvec = "1"
smol_str = "0.1"

[dependencies.la-arena]
git = "https://github.com/rust-lang/rust-analyzer"

[dependencies.gqls-base-db]
path = "../gqls-base-db"

[dependencies.gqls-syntax]
path = "../gqls-syntax"

[dependencies.vfs]
path = "../vfs"

[dev-dependencies]
expect-test = "1"
maplit = "1"

