[package]
name = "gqls-ty"
version = "0.1.0"
edition = "2021"

[dependencies]
salsa = "0.17.0-pre.2"
smol_str = "0.1"

[dependencies.gqls-ir]
path = "../gqls-ir"

[dev-dependencies]
expect-test = "1"

[dev-dependencies.gqls-fixture]
path = "../gqls-fixture"

[dev-dependencies.testing]
path = "../testing"

