[package]
name = "gqls"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gqls"

[dependencies]
anyhow = "1"
atty = "0.2"
globset = "0.4"
lsp-types = "0.93"
parking_lot = "0.12"
once_cell = "1"
salsa = "0.17.0-pre.2"
serde = "1"
serde_yaml = "0.8"
toml = "0.5"
tower-lsp = "0.17"
tracing = "0.1"
walkdir = "2"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "io-std", "fs"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.gqls-ide]
path = "../gqls-ide"

[dependencies.vfs]
path = "../vfs"

[dev-dependencies]
expect-test = "1"
futures = "0.3"
maplit = "1"
serde = "1"
serde_json = "1"
tower = "0.4"
tracing-test = "0.2"

[dev-dependencies.tokio-util]
version = "0.7"
features = ["codec"]
